my-deployment-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-bankadhesion-deployment-env
  labels:
    app: bankadhesion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bankadhesion
  template:
    metadata:
      labels:
        app: bankadhesion
    spec:
      containers:
      - name: bank-adhesion
        image: akdmle/bank_api
        ports:
        - containerPort: 8000
      - name: authentification
        image: akdmle/bank_authentification_env
      - name: standardisation
        image: akdmle/bank_standardisation
      - name: classification
        image: akdmle/bank_classification
      - name: bulkclassification
        image: akdmle/bank_bulk_classification
