my-service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-api
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-api
